Fix z-index for nav bar and document overlay on index pages.
See #5.

--- a/assets/sass/components/_document-preview.scss
+++ b/assets/sass/components/_document-preview.scss
@@ -33,6 +33,8 @@
 	transition: right 0.6s ease;
 	z-index: 99;
 	cursor: initial;
+	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
 	@include tablet() {
 		overflow: scroll;
 	}
